# thunk

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODOS.md  pyproject.toml  test_progress.sh  test_progress_simulation.py  test_ui_only.py
src/thunk/: __init__.py  arxiv_search_agent.py  callbacks.py  cli.py  content_fetcher.py  deep_research_agent.py  gemini_llm.py  search_provider.py  state_logger.py  types.py  vertex_rag_engine.py  web_search_agent.py
src/thunk/search/: arxiv_search_agent.py  search_provider.py  web_search_agent.py
tests/: test_arxiv_search_agent.py  test_deep_research_agent.py
